[package]
name = "webauthn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["http2"]}
axum-sessions = "0.5.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
url = "2.4.1"
tower-http = { version = "0.4.0", features = ["fs", "limit"] }
webauthn-rs = { version = "0.4.8", features = ["danger-allow-state-serialisation"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_rusqlite = "0.33.1"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.8"
